Version 4.xxxx (July xxth 2018)
- Implemented: OpenZWave, controller options for RetryTimeout, AssumeAwake and PerformReturnRoutes can now be set
- Implemented: InfluxDB Data push, support for Username/Password

Version 4.9700 (June 23th 2018)
- Implemented: Blockly, now possible to directly add/update Text devices
- Implemented: Blockly: now possible to use expressions in debug messages like "My temperature is {{temperaturedevice[1234]}} degrees" (see http://www.domoticz.com/wiki/Events)
- Implemented: Camera: support for HTTPS url's
- Implemented: Comm5 SM-xxxx sensors support
- Implemented: Command line option '-noupdates' to stop using the internal update functionality Corrected 'Proxy' settings in the settings page (missing element closing tag)
- Implemented: Denkovi Smartden IP In (32) with LAN Interface
- Implemented: Disabling the option to downgrade Domoticz and use a newer database (because of database migrations)
- Implemented: Door Lock Inverted
- Implemented: EcoCompteur device
- Implemented: eHouse BMS / Home Automation System Integration
- Implemented: Forcing appcache to be refreshed on every new build
- Implemented: Functionality to allow Python Plugins to integrate with the Domoticz Security Panel
- Implemented: HardwareMonitor monitor own process memory usage
- Implemented: Honeywell Lyric thermostat
- Implemented: I2C: support for MCP23017 (16bit I2C GPIO expander)
- Implemented: Initial support for FS20
- Implemented: KMTronic TCP Temperature hardware
- Implemented: Langiage "Persian" (Big tankgs to "foademadi", "maziar.hafezi" and "reza.hadipour2002")
- Implemented: Language "Albanian" (Big thanks to "arbenik")
- Implemented: Language "Bosnian" (Big thanks to "Vedran")
- Implemented: Language "Catalan" (Big thanks to "delfisastre")
- Implemented: Logitech Media Server: Added option to remove unused nodes
- Implemented: RFXtrx Lucci Fan DC implemented
- Implemented: MQTT Push message on scene/group switch event